--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
+    "uuid": "^11.1.0",
     "whatwg-url": "^14.2.0"
   },
   "devDependencies": {
